Backend : Made changes in CreatTeam and viewTeam to fix issues
